crates/keron-lang/tests/corpus/errors/check/pattern_guard_non_exhaustive.keron
# Every variant has only a guarded arm, so exhaustiveness fails —
# the runtime might evaluate every guard to `false` and have no arm
# left to take.
val x: String = match os_type() {
  "Macos" if true => "mac",
  "Linux" if true => "linux",
  "Windows" if true => "win",
  "Unknown" if true => "unknown",
}
